--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                  <p> I am a Full Stack AI developer who is passionate about creating innovative solutions that merge the power of artificial intelligence with seamless user experiences. My expertise spans across front-end and back-end development, 
                     where I build dynamic applications that not only meet functional requirements but also enhance user engagement. I am driven by the challenge of turning complex problems into intuitive, AI-powered tools that can transform how people interact with technology. 
                     Whether it's developing sophisticated machine learning models or crafting responsive web interfaces, I am committed to pushing the boundaries of what's possible in the tech space.  </p>
-                 <a href="cv/sample.pdf" download="cv/sample.pdf">Download CV</a>
+                 <a href="https://smallpdf.com/file#s=42676316-bbe7-449d-b4b4-74988e9bdfbc" download="./static/Rasik Kayastha.pdf">Download CV</a>
              </div>
          </div>
      </div>
