--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                      <br><br>
                      I have also worked on Generative AI projects, such as an MBTI predictor and heart disease prediction, and possess comprehensive knowledge in mathematics
                      <br> 
-                     Visit my<a href="https://www.linkedin.com/rasikay" target="-blank" id="link">Linkkedin</a>for more details<a href="#contact" id="link">contact</a>me.
+                     Visit my<a href="https://www.linkedin.com/in/rasikkay/" target="-blank" id="link">Linkkedin</a>for more details<a href="#contact" id="link">contact</a>me.
 
                  </p>
                  <a href="#contact">Learn more</a>
@@ -249,9 +249,9 @@
           <li style="--clr:#4506f0;">
              <a href="https://twitter.com/HimalPu94127169" target="-blank"><i class="fa-brands fa-twitter"></i></a>
          </li>
-         <!-- Instagram  -->
+         <!-- Linkedin  -->
          <li style="--clr:#1e2cad;">
-             <a href="https://www.linkedin.com/rasikay" target="-blank"><i class="fa-brands fa-linkedin"></i></a>
+             <a href="https://www.linkedin.com/in/rasikkay/" target="-blank"><i class="fa-brands fa-linkedin"></i></a>
          </li>
 
      </ul>
